fix spacing

--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -7,7 +7,7 @@
   display: flex;
   padding-left: 350px;
   padding-top: 28px;
-  height: 100vh;
+  height: 90vh;
   color: white;
   background-image: linear-gradient(rgb(45,49,57), rgb(5, 5, 5)85%);
 
