--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -2,7 +2,7 @@
   padding-left: 350px;
   padding-top: 100px;
   margin: auto;
-  height: 80vh;
+  height: 85vh;
   color: white;
 
   background-image: linear-gradient(rgb(45,49,57), rgb(5, 5, 5)85%);
