--- a/app/assets/stylesheets/player.css
+++ b/app/assets/stylesheets/player.css
@@ -11,6 +11,7 @@
   width: 100%;
   height: 72px;
   bottom: 0px;
+  z-index: 5;
 }
 
 .player button{
